--- a/_includes/clickableSquares.html
+++ b/_includes/clickableSquares.html
@@ -57,6 +57,6 @@
     },
     "includeFunctionParametersInRandomSeed": true
 }
-  var calculator = Desmos.GraphingCalculator(elt, {expressions: false);
+  var calculator = Desmos.GraphingCalculator(elt, {expressions: false};
   calculator.setState(state);
 </script>
