--- a/_includes/clickableSquares.html
+++ b/_includes/clickableSquares.html
@@ -8,9 +8,9 @@
     "graph": {
         "viewport": {
             "xmin": -10,
-            "ymin": -3.6637931034482762,
+            "ymin": -10,
             "xmax": 10,
-            "ymax": 3.6637931034482762
+            "ymax": 10
         },
         "userLockedViewport": true
     },
